сделал любой размер сетки до 100x100

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Интерактивная сетка 16x16</title>
+    <title>Интерактивная сетка с изменяемым размером</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        <h1>Интерактивная сетка 16x16</h1>
-        <p>Наведите курсор, чтобы рисовать. Цвет: <span id="current-color" class="current-color">#333333</span></p>
+        <h1>Интерактивная сетка для рисования</h1>
+        <p>Наведите курсор, чтобы рисовать. Текущий размер: <span id="grid-size-info">16x16</span></p>
     </div>
     
     <div class="controls">
+        <button id="change-grid-btn">Изменить размер сетки</button>
         <button id="reset-button">Очистить сетку</button>
         <button id="random-color-button">Случайный цвет</button>
     </div>
@@ -20,7 +21,7 @@
     <div id="grid-container" class="container"></div>
     
     <div class="footer">
-        <p>Используйте кнопку случайного цвета для изменения цвета рисования</p>
+        <p>Максимальный размер сетки: 100x100</p>
     </div>
 
     <script src="script.js"></script>
